# Coursera-tasks

./: .gitignore
BrownBelt/: CMakeLists.txt  profile.h  test_runner.h
BrownBelt/1 week/: create_hash_set.cpp  next.cpp  person_hasher.cpp  point3d_hasher.cpp  secondary_index.cpp
BrownBelt/2 week/: comment_server.cpp  ini.cpp  ini.h  json.cpp  json.h  refactoring.cpp  spendings_json.cpp  spendings_xml.cpp  test_ini.cpp  xml.cpp  xml.h
BrownBelt/2 week/code_restructure/: main.cpp  stats_aggregator.cpp  stats_aggregator.h  stats_aggregator_test.cpp
BrownBelt/2 week/double_dispatching/: collide.cpp  game_object.h  geo2d.cpp  geo2d.h
BrownBelt/3 week/: concurrent_map_2.cpp  expression_tree.cpp  lazy_value.cpp  pipeline.cpp  polynomial.cpp  polynomial_unordered_map.cpp  print_stats_2.cpp  synchronized_2.cpp  zoo.cpp
BrownBelt/4 week/: Solution.cpp  main.cpp  unique_ptr.cpp
BrownBelt/4 week/Cache/: Solution.cpp  main.cpp
BrownBelt/4 week/Texture/: Solution.cpp  main.cpp
RedBelt/: CMakeLists.txt
RedBelt/1 week/: Deque.cpp  airline_ticket.h  logger.cpp  max_element_if.cpp  paginator.cpp  print_values.cpp  sort_by.cpp  table.cpp  test_runner.h  uniq_id.cpp  update_field.cpp
RedBelt/2 week/: hotel_booking.cpp  learner.cpp  object_pool.cpp  slow.cpp  slow2.cpp  sort_students.cpp  student.h  test_runner.h
RedBelt/3 week/: linked_list.cpp  object_pool.cpp  simple_vector.h  swap_sort_copy.cpp
RedBelt/4 week/: airport_counter.cpp  athletes.cpp  profile.h  server_stats.cpp  stack_vector.cpp  stack_vector.h  stats.cpp  stats.h  text_editor.cpp  translator.cpp
RedBelt/5 week/: ConcurrentMap.cpp  MergeSort3Parts.cpp  explore_key_words.cpp  group_heavy_strings.cpp  josephus_permutation.cpp  matrix_sum.cpp  priority_collection_2.cpp  simple_vector.h  simple_vector_2.cpp  simple_vector_2.h  split_into_sentences.cpp  synchronized.cpp
RedBelt/6 week/: coursera_test_case.txt
RedBelt/6 week/first_part/: RequestTimeEstimator.cpp  RequestTimeEstimator.h  main.cpp  profile.h  search_server.cpp  search_server.h
RedBelt/6 week/second_part/: RequestTimeEstimator.h  iterator_range.h  main.cpp  search_server.cpp  search_server.h  test_runner.h
YellowBelt/: AverageTemperature.cpp  BaseOfRegions.cpp  CMakeLists.txt  MassOfBlocks.cpp  TaskStatus.cpp  TestGetDistinctRealRootCount.cpp  TestPerson.cpp  TestRational.cpp  TetsIsPalindrom.cpp  test.txt
YellowBelt/1 week/: AverageTemperature.cpp  BaseOfRegions.cpp  MassOfBlocks.cpp  ReferenceToElement.cpp  Sqr.cpp
YellowBelt/2 week/: RefactoringOfBusStops.cpp  TestPerson.cpp  TestRational.cpp
YellowBelt/3 week/: BusManager.rar  Rectange.h
YellowBelt/3 week/BusManager/: query.h  (+6 more)
YellowBelt/4 week/: Demography.cpp  FindNearestElement.cpp  NamesAndSurnames.cpp  PartOfSet.cpp  PartOfVector.cpp  Permutations.cpp  RemoveDuplicates.cpp  SplitIntoWords.cpp
YellowBelt/5 week/: Inheritance.cpp  Notifiers.cpp  Refactor.cpp  SetOfFigures.cpp
YellowBelt/6 week/: ConditionParser.cpp  ConditionParser.h  ConditionParserTest.cpp  Database.cpp  Database.h  Date.cpp  Date.h  DateParser.cpp  DateParser.h  Node.cpp  Node.h  Token.cpp  condition_parser.cpp  condition_parser.h  database.cpp  database.h  date.cpp  date.h  date_parser.cpp  date_parser.h  main.cpp  node.cpp  node.h  test_runner.h  token.h
(+20 files in other folders)
